--- a/assets/css/pigga.css
+++ b/assets/css/pigga.css
@@ -11578,3 +11578,13 @@ section.has-img-bg:after {
   width: 320px;
   height: 400px;
 }
+
+#loading-plugin{
+  width: 50px;
+  height: 50px;
+  margin-top: 15px;
+}
+
+.hover-bakcground{
+  background-color: #e6f5e9;
+}
